[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.12"
serde_json = "1.0.139"
text_io = "0.1.12"
tokio = { version = "1.43.0", features = ["full"] }
database = { path = "../database" }
rpassword = "7.3.1"
argon2 = { version = "0.5.3", features = ["password-hash"] }
rand_core = { version = "0.6.4", features = ["std"] }
